# fastcookie

./: Dockerfile  Makefile  cookiecutter.json  pyproject.toml
{{ cookiecutter.directory_name }}/: Dockerfile  README.md  alembic.ini  bootstrap.py  docker-compose.yml  main.py  prestart.sh  pyproject.toml
{{ cookiecutter.directory_name }}/api/: router.py
{{ cookiecutter.directory_name }}/api/{{ cookiecutter.first_module_name }}/: api.py  models.py  schema.py
{{ cookiecutter.directory_name }}/config/: __init__.py  all.py
{{ cookiecutter.directory_name }}/db/: __init__.py  session.py
{{ cookiecutter.directory_name }}/gunicorn/: gunicorn_conf.py  start.sh
{{ cookiecutter.directory_name }}/migrations/: env.py
{{ cookiecutter.directory_name }}/migrations/versions/: 9fd96297cbf7_.py
{{ cookiecutter.directory_name }}/scripts/: backend_post_start.py  backend_pre_start.py  initial_data.py
