[tool.poetry]
name = "fastcookie"
version = "0.0.1"
description = "FastAPI template"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
cookiecutter = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
autoflake = "^2.2.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
